syntax = "proto3";

package v1.todo;

option go_package = "github.com/WonJongWoon/go-grpc-study/protos/v1/todo";

service TodoService {
  rpc GetTodo(GetTodoRequest) returns (TodoResponse);
  rpc CreateTodo(CreateTodoRequest) returns (TodoResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (TodoResponse);
  rpc DeleteTodo(DeleteTodoRequest) returns (EmptyResponse);
}

message GetTodoRequest {
  int32 todoId = 1;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message UpdateTodoRequest {
  int32 todoId = 1;
  string title = 2;
  string description = 3;
  TodoStatus status = 4;
}

message DeleteTodoRequest {
  int32 todoId = 1;
}

message TodoResponse {
  string title = 1;
  string description = 2;
  TodoStatus status = 3;
  string author = 4;
  string createdAt = 5;
  string modifiedAt = 6;
}

enum TodoStatus {
  BACK_LOG = 0;
  ACCEPTED = 1;
  IN_PROGRESS = 2;
  OCCUPIED = 3;
}

message EmptyResponse {}
